# subway-agent

./: .gitignore  Dockerfile  GCP_DEPLOYMENT.md  GTFS_MIGRATION.md  RUN_LOCALLY.md  pyproject.toml  requirements.txt  test_transfer.py  test_transfer_demo.py
docs/: ARCHITECTURE.md
src/subway_agent/: __init__.py  agent.py  api.py  cli.py  config.py  database.py  gtfs_static.py  mta_feed.py  routing.py  stations.py  tools.py
src/subway_agent/static/: index.html
tests/: __init__.py  test_database.py  test_routing.py  test_stations.py
